fix: remove z-index for logo

--- a/_extensions/coeos/coeos.scss
+++ b/_extensions/coeos/coeos.scss
@@ -94,6 +94,7 @@ $btn-code-copy-color: $body-color !default;
   height: 100% !important;
   width: auto !important;
   color: $body-color !important;
+  z-index: unset !important;
 }
 
 .slide-menu-button {
